Fixed: picture size not responsive

--- a/public/css/jukebox.css
+++ b/public/css/jukebox.css
@@ -87,14 +87,24 @@ body {
 /*
 * Cover
 */
-
 .cover {
   padding: 0 20px;
   text-align: center;
 }
+.cover a {
+  position: relative;
+  display: block;
+  width: 100%;
+  max-width: 300px;
+  margin: auto
+}
+.cover .fa-2x {
+  position: absolute;
+  top: 7px;
+  right: 10px;
+}
 .cover img {
-  width: 300px;
-  max-height: 300px;
+  width: 100%;
   box-shadow: 0 0 3px #222;
 }
 .cover .btn-lg {
@@ -103,7 +113,7 @@ body {
 }
 
 .cover .progress {
-  width: 300px;
+  width: 100%;
   height: 4px;
   margin: auto;
 }
